--- a/lifeflight-dashboard-frontend/src/index.css
+++ b/lifeflight-dashboard-frontend/src/index.css
@@ -3,8 +3,7 @@
 html,
 body,
 #root,
-.app,
-.content {
+.app {
   height: 100%;
   width: 100%;
   font-family: "Source Sans Pro", sans-serif;
@@ -13,6 +12,13 @@ body,
 .app {
   display: flex;
   position: relative;
+}
+
+.content {
+  height: 100%;
+  width: 100%;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 ::-webkit-scrollbar {
